--- a/scss/layouts/_header.scss
+++ b/scss/layouts/_header.scss
@@ -152,7 +152,7 @@
           }
           ul {
             position: absolute;
-            z-index: 2;
+            z-index: 10;
             bottom: -25px;
             left: 50%;
             padding: 16px 0;
@@ -237,7 +237,7 @@
           }
           ul {
             position: absolute;
-            z-index: 2;
+            z-index: 10;
             bottom: -5px;
             right: 0;
             padding: 16px 0;
@@ -303,7 +303,7 @@
           }
           ul {
             position: absolute;
-            z-index: 2;
+            z-index: 10;
             bottom: -5px;
             right: 0;
             padding: 16px 0;
